--- a/spring-backend/pom.xml
+++ b/spring-backend/pom.xml
@@ -46,6 +46,17 @@
             <scope>runtime</scope>
             <optional>true</optional>
         </dependency>
+        <dependency>
+            <groupId>com.google.protobuf</groupId>
+            <artifactId>protobuf-java</artifactId>
+            <version>4.28.2</version>
+        </dependency>
+
+        <dependency>
+            <groupId>io.netty</groupId>
+            <artifactId>netty-codec-http2</artifactId>
+            <version>4.1.124.Final</version>
+        </dependency>
 
         <dependency>
             <groupId>io.jsonwebtoken</groupId>
